--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Welcome on Tania RICHMOND webpage, hosted with GitHub Pages.</p>
+<p>(To Be Updated.)</p>
 </body>
 </html>
