--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>Welcome on Tania RICHMOND webpage, hosted with GitHub Pages.</p>
-<p>(To Be Updated.)</p>
+<p>For the English version, click <a href="https://taniarichmond.github.io/home" target="_blank">here</a>.</p>
+<p>Pour la version française, cliquer <a href="https://taniarichmond.github.io/accueil" target="_blank">ici</a>.</p>
 </body>
 </html>
